--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dall-E 2 - Dashboard</title>
-  <base href="/projects/dalle-2-dashboard">
+  <base href="/">
 </head>
 
 <body>
